# agenticArxiv

./: .env.example  .env.test  Dockerfile  Dockerfile.ingest  README.md  compose.yml  entrypoint.sh  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: daily_ingest.yml
airflow/: Dockerfile
airflow/dags/: arxiv_paper_ingestion.py
airflow/dags/arxiv_ingestion/: fetching.py
scripts/: daily_ingest.py  test_connections.py
src/: config.py  dependencies.py  main.py
src/db/interfaces/: postgresql.py
src/mcp_server/: server.py
src/mcp_server/tools/: ask.py  feedback.py  papers.py  search.py
src/models/: paper.py
src/repositories/: paper.py
src/routers/: a2a.py  agentic_ask.py  ask.py  hybrid_search.py  ingest.py  ping.py  supervisor_ask.py
src/schemas/api/: ask.py
src/schemas/indexing/: models.py
src/schemas/pdf_parser/: models.py
src/services/: metadata_fetcher.py
src/services/agents/: __init__.py  agentic_rag.py  config.py  context.py  factory.py  models.py  state.py  summarizer_agent.py  tools.py
src/services/agents/nodes/: __init__.py  critic_node.py  generate_answer_node.py  grade_documents_node.py  guardrail_node.py  out_of_scope_node.py  output_guardrail_node.py  researcher_node.py  rewrite_query_node.py  supervisor_node.py  utils.py  writer_node.py
src/services/arxiv/: __init__.py  client.py
src/services/bedrock_guardrails/: service.py
src/services/cache/: __init__.py  client.py  factory.py
src/services/embeddings/: hyde.py  jina_client.py  pinecone_client.py
src/services/indexing/: hybrid_indexer.py  text_chunker.py
src/services/langfuse/: client.py
src/services/logfire/: factory.py
src/services/ollama/: client.py  prompts.py
src/services/ollama/prompts/: __init__.py
src/services/openai_llm/: client.py
src/services/opensearch/: client.py  index_config_hybrid.py
src/services/pdf_generator/: __init__.py  generator.py
src/services/pdf_parser/: __init__.py  docling.py
src/services/reranker/: __init__.py  cohere_client.py
src/static/: dashboard.html  indexer.html
tests/api/: conftest.py
tests/eval/: test_rag_metrics.py
tests/unit/: test_config.py
tests/unit/services/: test_pdf_generator.py
tests/unit/services/agents/: test_agentic_rag.py
