[project]
name = "Agentic-RAG-project"
version = "0.1.0"
description = "Agentic RAG system — arXiv Paper Curator"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "opensearch-py>=3.0.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "docling>=2.43.0",
    "python-dateutil>=2.9.0.post0",
    "fastmcp>=2.0.0",
    "gradio>=4.0.0",
    "langfuse>=4.0.0",
    "redis>=6.4.0",
    "python-telegram-bot>=21.0,<22.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.0.0",
    "logfire[fastapi,httpx,redis,sqlalchemy]>=4.33.0",
    "boto3>=1.34.0",
    "langchain-aws>=0.2.0",
    "langchain-ollama>=0.1.0",
    # CPU-only torch to avoid ~2GB CUDA bloat in Docker images
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pinecone>=9.1.0",
    "reportlab>=5.0.0",
]
readme = "README.md"

[project.optional-dependencies]
# Install with: pip install -e ".[reranker]"
# The local CrossEncoder reranker is disabled on Render (RENDER=true) and costs
# ~1.1s of startup time via the transformers transitive import chain.
# Only install locally when you want to test/use the reranker.
reranker = ["sentence-transformers>=5.1.0,<6.0.0"]

[dependency-groups]
dev = [
    "anyio[trio]>=4.9.0",
    "apache-airflow[postgres]>=2.10.3",
    "asgi-lifespan>=2.1.0",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "notebook>=7.4.4",
    "polyfactory>=2.21.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-cov>=6.1.1",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
    "testcontainers>=4.10.0",
    "types-sqlalchemy>=1.4.53.38",
]
viz = [
    "grandalf>=0.8",
]

[tool.ruff]
line-length = 130
exclude = ["notebooks/**", ".venv/**"]
src = ["src", "tests", "airflow/dags"]
lint.select = [
  "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files = ".env.test"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.mypy]
explicit_package_bases = true
ignore_errors = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "airflow/dags"]
include = ["src*", "arxiv_ingestion*"]

[tool.pyright]
include = ["src", "airflow/dags"]
extraPaths = [".", "airflow/dags"]
autoSearchPaths = false
executionEnvironments = [
  { root = "." }
]



